--- a/student_management_app/templates/hod_template/hod_edit_profile.html
+++ b/student_management_app/templates/hod_template/hod_edit_profile.html
@@ -15,16 +15,16 @@ Edit Profile
               </div>
               <!-- /.card-header -->
               <!-- form start -->
-              <form role="form"  method="post">
+              <form role="form" action="{% url 'edit_hod_profile_form' %}" method="post">
                   {% csrf_token %}
                 <div class="card-body">
                   <div class="form-group">
                     <label>Username</label>
-                    <input type="text" class="form-control" name="username" value="{{ user.username }}" >
+                    <input type="text" class="form-control" name="username" value="{{ user.username }}" disabled="true">
                   </div>
                   <div class="form-group">
                     <label>Email</label>
-                    <input type="text" class="form-control" name="username" value="{{ user.email }}" >
+                    <input type="email" class="form-control" name="email" value="{{ user.email }}" >
                   </div>
                    <div class="form-group">
                     <label>First Name</label>
@@ -36,7 +36,15 @@ Edit Profile
                   </div>
                   <div class="form-group">
                     <label>Gender</label>
-                    <input type="text" class="form-control" name="gender" value="{{ user.gender }}" >
+                    <input type="text" class="form-control" name="gender" value="{{ hod.gender }}" >
+                  </div>
+                  <div class="form-group">
+                    <label>Department</label>
+                    <input type="text" class="form-control" name="department_id" value="{{ hod.department_id }}">
+                  </div>
+                  <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" class="form-control" name="address" value="{{ hod.address }}">
                   </div>
                    <div class="form-group">
                       {% if messages %}
